@@ -1,5 +1,13 @@
 2019-06-04  Peter Bloomfield  <pbloomfield@bellsouth.net>
 
+	Use G_DECLARE_FINAL_TYPE to declare LibBalsaCellRendererButton
+
+	The object was already private.
+
+	* libbalsa/cell-renderer-button.h:
+
+2019-06-04  Peter Bloomfield  <pbloomfield@bellsouth.net>
+
 	Use G_DECLARE_FINAL_TYPE to declare LibBalsaAddressView
 
 	The object was already private.
